# DemoLib

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.cpp
consumer/: CMakeLists.txt
consumer/include/consumer/: consumer.h  export.hpp
consumer/src/: consumer.cpp
mylib/: CMakeLists.txt
mylib/include/mylib/: export.hpp  mylib.h  mylib_impl.h
mylib/src/: mylib.cpp  mylib_impl.cpp  privlib.cpp  privlib.h
src/: converter.cpp  logger_conf.cpp  main.cpp
